# SillyGame

./: CMakeLists.txt  README.md  main.cpp
common/: Game.cpp  Game.h  GameState.cpp  GameState.h
common/component/render/: IRendererComponent.h  Layer.h  Material.cpp  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h
common/component/render/ui/: TextRenderer.cpp  TextRenderer.h
common/input/: Input.cpp  Input.h
common/object/: GameObject.cpp  GameObject.h  Object.cpp  Object.h
common/object/camera/: Camera.cpp  Camera.h
common/object/position/: Direction.h  Transform.cpp  Transform.h  Vector3.h
common/object/render/: Layer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.h
common/object/ui/: Text.cpp  Text.h
common/renderer/: IRendererVisitor.h  Renderer.cpp  Renderer.h
common/renderer/adapter/: OpenGL.cpp  OpenGL.h  RenderAdapter.cpp  RenderAdapter.h
common/renderer/shader/: ShaderManager.cpp  ShaderManager.h
common/renderer/text/: FontManager.cpp  FontManager.h
common/renderer/texture/: Texture.cpp  Texture.h  Texture2d.cpp  Texture2d.h
common/scene/: Director.cpp  Director.h  ISceneDirection.h  IScript.h  Scene.cpp  Scene.h  SceneState.cpp  SceneState.h
common/state/: GameState.h  SceneState.cpp
common/time/: Time.cpp  Time.h
common/type/: Vector3.cpp  Vector3.h
common/window/: Window.cpp  Window.h
common/world/: World.cpp  World.h
common/world/terrain/: Tile.cpp  Tile.h
game/: SceneDirection.cpp  SceneDirection.h  Script.cpp  Script.h
game/objects/Camera/: TopDownCamera.cpp  TopDownCamera.h
game/objects/Cube/: Cube.cpp  Cube.h
game/objects/Debug/: DebugText.cpp  DebugText.h
game/objects/Triangle/: Triangle.cpp  Triangle.h
game/scenes/: TestScene.cpp  TestScene.h
game/scenes/debug/: DebugWorld.cpp  DebugWorld.h
game/scenes/game/: DebugWorld.cpp
game/shaders/basic/: fragment.glsl  vertex.glsl
